0000000000000/FEBS-Cloud-K8S/febs/febs-server-test-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: febs-server-test-d
spec:
  selector:
    matchLabels:
      name: febs-server-test
  replicas: 2
  template:
    metadata:
      labels:
        name: febs-server-test
    spec:
      containers:
        - name: febs-server-test
          image: docker.mrbird.cc/febs/febs-server-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8202
          volumeMounts:
            - mountPath: /log
              name: febs-server-test-data
          resources:
            requests:
              cpu: 0.2
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
      volumes:
        - name: febs-server-test-data
          nfs:
            path: /nfs/log
            server: 192.168.33.15
