0000000000000/FEBS-Cloud-K8S/febs/extends-service.yml
# 映射外部MySQL服务
apiVersion: v1
kind: Service
metadata:
  name: febs-mysql-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: febs-mysql-service
subsets:
  - addresses:
      - ip: 192.168.33.16
    ports:
      - port: 3306
---
# 映射外部Redis服务
apiVersion: v1
kind: Service
metadata:
  name: febs-redis-service
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: febs-redis-service
subsets:
  - addresses:
      - ip: 192.168.33.16
    ports:
      - port: 6379
---
# 映射外部logstash服务
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
spec:
  ports:
    - protocol: TCP
      port: 4560
      targetPort: 4560
---
apiVersion: v1
kind: Endpoints
metadata:
  name: logstash-service
subsets:
  - addresses:
      - ip: 192.168.33.16
    ports:
      - port: 4560
