0000000000000/FEBS-Cloud-K8S/febs/febs-gateway-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: febs-gateway-service
spec:
  ports:
    - port: 8301
      targetPort: 8301
  selector:
    name: febs-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: febs-gateway
spec:
  selector:
    matchLabels:
      name: febs-gateway
  replicas: 2
  template:
    metadata:
      labels:
        name: febs-gateway
    spec:
      containers:
        - name: febs-gateway
          image: docker.mrbird.cc/febs/febs-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8301
          resources:
            requests:
              cpu: 0.3
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
          volumeMounts:
            - mountPath: /log
              name: febs-gateway-data
      volumes:
        - name: febs-gateway-data
          nfs:
            path: /nfs/log
            server: 192.168.33.15
