0000000000000/FEBS-Cloud-K8S/febs/febs-monitor-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: febs-monitor-admin-service
spec:
  ports:
    - port: 8401
      targetPort: 8401
  selector:
    name: febs-monitor-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: febs-monitor-admin
spec:
  selector:
    matchLabels:
      name: febs-monitor-admin
  replicas: 1
  template:
    metadata:
      labels:
        name: febs-monitor-admin
    spec:
      containers:
        - name: febs-monitor-admin
          image: docker.mrbird.cc/febs/febs-monitor-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8401
          resources:
            requests:
              cpu: 0.3
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
          volumeMounts:
            - mountPath: /log
              name: febs-monitor-admin-data
      volumes:
        - name: febs-monitor-admin-data
          nfs:
            path: /nfs/log
            server: 192.168.33.15
