0000000000000/FEBS-Cloud-K8S/febs/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: febs-ingress
spec:
  rules:
    - host: api.mrbird.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: febs-gateway-service
              servicePort: 8301
    - host: monitor.mrbird.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: febs-monitor-admin-service
              servicePort: 8401
